# automake_hello

./: Makefile.am  README  configure.ac  hello.c
